--- a/View/index.html
+++ b/View/index.html
@@ -10,6 +10,8 @@
     <title>store</title>
 </head>
 <body>
+   
+
     <div id="wrapper" class="active">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
@@ -20,9 +22,19 @@
             <ul class="sidebar-nav" id="sidebar">
                 <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
                 <li><a>link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+               
             </ul>
         </div>
-    
+
+        <label for="motclef">titre</label>
+        <input type="text" id="motclef" name="motclef"><span class="sub_icon glyphicon glyphicon-link"></span>
+        <label for="genre">genre</label>
+        <input type="text" id="genre" name="genre"><span class="sub_icon glyphicon glyphicon-link"></span>
+        <label for="type">type</label>
+        <input type="text" id="type" name="type"><span class="sub_icon glyphicon glyphicon-link"></span>
+        <input type="button" id="rechBtn" value="rechercher"><span class="sub_icon glyphicon glyphicon-link"></span>
+        <input type="button" id="last" value="<<<"><span class="sub_icon glyphicon glyphicon-link"></span>
+        <input type="button" id="next" value=">>>"><span class="sub_icon glyphicon glyphicon-link"></span></br></br>
 <div class="row" id="list">
 
 
